# Recommendation-Engine

./: Dockerfile  README.md  alembic.ini  entrypoint.sh  load_ml100k.py  movielens.db  pyproject.toml
backend/: Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  load_ml100k.py  notes.txt
backend/migrations/: env.py
backend/migrations/versions/: 8dd3f551c621_initial_schema.py
backend/recommender/: app.py  models.py  schemas.py
backend/tests/: conftest.py  test_app.py  test_db.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/.angular/cache/20.0.4/recommender/: .tsbuildinfo
frontend/.angular/cache/20.0.4/recommender/vite/deps_ssr/: _metadata.json
frontend/src/: index.html
frontend/src/app/: app.html  app.spec.ts  app.ts
frontend/src/app/initial/usuario/: usuario.html
frontend/src/app/training-engine/: training-engine.css  training-engine.html  training-engine.service.ts  training-engine.spec.ts  training-engine.ts
migrations/versions/: 6e77d793c249_create_users_table.py  d143932a8fb9_.py
recommender/: app.py  database.py  models.py
tests/: conftest.py  test_app.py  test_db.py
