[project]
name = "recommender"
version = "0.1.0"
description = ""
authors = [
    {name = "Yara",email = "yara.rodrigues.inacio@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
license = {file = "LICENSE"}
dependencies = [
    "fastapi[standard] (>=0.115.13,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.0"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
taskipy = "^1.14.1"
pytest-asyncio = "^1.0.0"
testcontainers = "^4.10.0"


[tool.ruff]
line-length = 79
extend-exclude = [
    "migrations",
]


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']


[tool.ruff.format]
preview = true
quote-style = 'single'


[tool.pytest.ini_options]
testpaths = [
    "."
]
addopts = [
    '-p no:warnings',
]


[tool.taskipy.tasks]    
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi run recommender/app.py'
pre_test = 'task lint && task format'
test = 'pytest -s -x --cov=recommender -vv'
post_test = 'coverage html'